Fix group label spacing

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -102,11 +102,11 @@ select.rounded-r-only {
 }
 
 .group {
-  @apply mt-10 text-white;
+  @apply mt-6 text-white;
 }
 
 .group-label {
-  @apply block mb-1 text-sm font-medium leading-5 text-gray-400;
+  @apply block mb-1 text-sm font-medium leading-6 text-gray-400;
 }
 
 /* Used for animating height */
